feat: Remove --enalbe-preview.